--- a/recipe_app/style.css
+++ b/recipe_app/style.css
@@ -37,6 +37,7 @@ header input{
     border: none;
     border-radius: 3px;
     padding: 0.5rem 1rem;
+    font-family: inherit;
 }
 
 header button{
@@ -48,18 +49,21 @@ header button{
 }
 
 .fav-container{
-    padding: 1rem;
+    padding: 0.25rem 1rem;
     text-align: center;
     background-color: rgb(233,199,255);
 }
 
 .fav-meals{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     list-style-type: none;
     padding: 0;
 }
 
 .fav-meals li{
+    margin: 5px;
     width: 85px;
 }
 
@@ -74,4 +78,54 @@ header button{
 
 .fav-meals li span{
     font-size: 0.9rem;
+}
+
+.meal{
+    border-radius: 3px;
+    margin: 1.5rem;
+    box-shadow: 0 0 5px #3333331A;
+    overflow: hidden;
+}
+
+.meal-header{
+    position: relative;
+}
+
+.meal-header .random{
+    position: absolute;
+    top: 10px;
+    background-color: #fff;
+    padding: 0.25rem 1rem;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.meal-header img{
+    object-fit: cover;
+    height: 250px;
+    width: 100%;
+}
+
+.meal-body{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+
+}
+
+.meal-body h4{
+    margin: 0;
+}
+
+.meal-body button{
+    border: none;
+    background-color: transparent;
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: gray;
+}
+
+.meal-body button.active{
+    color: rebeccapurple;
 }
