--- a/password_generator/style.css
+++ b/password_generator/style.css
@@ -89,3 +89,21 @@ input[type=number]{
     padding: 0.5em;
     font-size: 1rem;
 }
+
+#btn_paste{
+    position: relative;
+}
+
+#tooltip_clipboard{
+    position: absolute;
+    left: 100%;
+    top: 0;
+    font-size: 0.75rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 0.5rem;
+    border-radius: 5px;
+    margin-left: 0.5rem;
+    display: none;
+    /* top: -100%; */
+    /* transform: translateX(25%); */
+}
