--- a/recipe_app/style.css
+++ b/recipe_app/style.css
@@ -27,6 +27,51 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    position: relative;
+}
+
+.sidebar_menu{
+    position: absolute;
+    left: 0;
+    top: 0;
+    min-height: 100%;
+    background-color: white;
+    width: 100%;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in-out;
+}
+
+.sidebar_menu.active{
+    transform: translateX(0%);
+}
+
+.close_sidebar_menu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    border: none;
+    margin: 1rem;
+    font-size: 1.5rem;
+}
+
+.sidebar_menu ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    min-height: 100%;
+    gap: 5rem;
+    list-style: none;
+}
+
+.sidebar_menu ul a, .close_sidebar_menu{
+    color: rgb(77, 77, 77);
+
 }
 
 img {
@@ -39,6 +84,7 @@ img {
     box-shadow: 0 0 5px #3333331a;
     border-radius: 3px;
     overflow: hidden;
+    position: relative;
 }
 
 header {
