--- a/recipe_app/style.css
+++ b/recipe_app/style.css
@@ -92,6 +92,13 @@ header {
     align-items: center;
     justify-content: space-around;
     padding: 1rem;
+    height: 100px;
+}
+
+header .logo-input{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 header input {
@@ -100,20 +107,38 @@ header input {
     border-radius: 3px;
     padding: 0.5rem 1rem;
     font-family: inherit;
+    height: 32px;
+    transition: all 0.3s;
 }
+
+header img{
+    width: 100%;
+    height: 80px;
+    object-fit: cover;
+    transition: all 0.3s ;
+    display: block;
+}
+
+header img.hide, header input.hide{
+    height: 0px;
+    padding: 0px;
+}
+
+#close_search.hide, #search.hide{
+    display: none;
+}
+
 
 header button {
     background-color: transparent;
     border: none;
-    /* color: #aaa; */
     color: hsl(0, 0%, 36%);
-
     font-size: 1.5rem;
     margin-left: 10px;
+    transition: all 0.3s;
 }
 
-.btn_menu{
-}
+
 
 .fav-container {
     padding: 1rem 0rem 1rem 1rem;
