--- a/todo_app/style.css
+++ b/todo_app/style.css
@@ -38,8 +38,13 @@ h1{
 #todo_list div.task{
     border-top: 1px solid lightgray;
     text-align: left;
-    cursor: pointer;
     font-size: 1.5rem;
+    cursor: pointer;
+}
+
+#todo_list div.task.done{
+    color: lightgray;
+    text-decoration: line-through;
 }
 
 p label{
