--- a/drawing_app/styles.css
+++ b/drawing_app/styles.css
@@ -15,5 +15,35 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 100%;
+}
+
+.options{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 400px;
+    padding: 1rem;
+    background-color: purple;
+    gap: 0.5rem;
+}
+
+.options button, span, input{
+    padding: 0.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    font-size: 2rem;
+    overflow: visible;
+    white-space: normal;
+    word-wrap: break-word;
+    background-color: white;
+    border: none;
+}
+
+.clear{
+    margin-left: auto;
 }
