--- a/weather_app/src/app/globals.css
+++ b/weather_app/src/app/globals.css
@@ -1,6 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.ubuntu-mono-regular {
+  font-family: "Ubuntu Mono", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ubuntu-mono-bold {
+  font-family: "Ubuntu Mono", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.ubuntu-mono-regular-italic {
+  font-family: "Ubuntu Mono", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.ubuntu-mono-bold-italic {
+  font-family: "Ubuntu Mono", serif;
+  font-weight: 700;
+  font-style: italic;
+}
 
 :root {
   --background: #ffffff;
@@ -17,7 +43,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Ubuntu Mono' Arial, Helvetica, sans-serif;
   height: 100vh;
 }
 
@@ -25,10 +51,12 @@ body {
 .container{
   min-height: 100vh;
   text-align: center;
+  min-width: 100%;
 }
 
 .main-info{
-  height: calc(100vh*0.3);
+  max-height: calc(100vh*0.3);
+  width: 100%;
   /* background-color: green; */
   background-image: url(https://www.thecityofldn.com/wp-content/uploads/2023/05/jamiesmithphoto-2162-Tower-Bridge-with-City-behind-reduced-2000x1334.jpg);
   background-repeat: no-repeat;
@@ -56,13 +84,13 @@ body {
 
 
 .extra-info{
-  height: calc(100vh*0.5);
+  max-height: calc(100vh*0.5);
   background-color: white;
   color:gray;
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.5rem;
   justify-content: center;
   align-items: center;
 }
@@ -71,10 +99,13 @@ body {
   display: flex;
   gap: 1rem;
   justify-content: center;
+  align-items: center;
 }
 
 .extra-info .weather-day .day-name{
   margin-right: 4rem;
+  text-align: left;
+  width: 75px;
 }
 
 .extra-info .weather-day .tempeture{
@@ -82,7 +113,7 @@ body {
 }
 
 .change-location{
-  height: calc(100vh*0.2);
+  min-height: calc(100vh*0.2);
   background-color: grey;
   color: white;
   display: flex;
