fix form container space

--- a/weather_app/src/app/globals.css
+++ b/weather_app/src/app/globals.css
@@ -52,6 +52,8 @@ body {
   min-height: 100vh;
   text-align: center;
   min-width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 .main-info{
